--- a/docs/source/locale/ru/LC_MESSAGES/CSUI-Start.po
+++ b/docs/source/locale/ru/LC_MESSAGES/CSUI-Start.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CSUI\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-10-24 17:18+0700\n"
-"PO-Revision-Date: 2018-10-30 12:48+0700\n"
+"POT-Creation-Date: 2018-12-25 15:59+0700\n"
+"PO-Revision-Date: 2018-12-25 17:03+0700\n"
 "Last-Translator: \n"
 "Language: ru\n"
 "Language-Team: \n"
@@ -93,16 +93,18 @@ msgid ""
 "she does not need to enter the domain every time at logging in. In this case "
 "the domain field can be hidden by clicking |adv icon|. Find more information "
 "on the feature configuration at the `configuration guide <https://github.com/"
-"bwsw/cloudstack-ui/blob/master/config-guide.md#default-domain-url>`_."
+"bwsw/cloudstack-ui/blob/master/config-guide.md#default-domain>`_."
 msgstr ""
 "Администратор может установить домен в конфигурационном файле. В этом случае "
 "заданное значение будет автоматически указываться в качестве домена при входе "
 "в систему. Пользователю не придется вводить его каждый раз при авторизации. "
-"Поле домена можно скрыть, нажав на |adv icon|."
+"Поле домена можно скрыть, нажав на |adv icon|. Подробнее об определении домена "
+"через конфигурационный файл читайте в `руководстве по конфигурациям <https://"
+"github.com/bwsw/cloudstack-ui/blob/master/config-guide.md#default-domain>`_."
 
 #: ../../CSUI-Start.rst:27
 msgid ""
-"Other way to log in is to enter a URL in the format ``http://<ip-address>/"
+"Another way to log in is to enter a URL in the format ``http://<ip-address>/"
 "login?domain=<domain>``. The domain will be prepopulated in the logging in "
 "form with the value that is specified in the URL. Please, note, the domain "
 "value in URL will override the domain set in the configurations by "
@@ -112,8 +114,7 @@ msgstr ""
 "домена в следующем формате: ``http://<ip-address>/login?domain=<domain>``.  "
 "Значение домена из URL будет автоматически задано в форме авторизации. "
 "*Примечание*: значение домена из URL переопределяет значение домена, заданного "
-"Администратором в конфигурационном файле (`см.  подробнее <https://github.com/"
-"bwsw/cloudstack-ui/blob/master/config-guide.md#default-domain-url>`_)."
+"Администратором в конфигурационном файле."
 
 #: ../../CSUI-Start.rst:31
 msgid ""
