--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1517,6 +1517,9 @@
     "REQUEST": {
       "REQUEST_RESOURCES": "Request resources"
     },
+    "NOTIFICATIONS": {
+      "LIMIT_UPDATED": "Resource limits updated successfully"
+    },
     "MIN": "Min",
     "MAX": "Max",
     "UPDATE": "Update"
