--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -1510,8 +1510,10 @@
       "PRIMARY_STORAGE": "Primary storage (GB)",
       "SECONDARY_STORAGE": "Secondary storage (GB)"
     },
-    "REQUEST": {
-      "REQUEST_RESOURCES": "Request resources"
+    "ADMIN_PAGE": {
+      "LIMIT_UPDATED": "Квоты ресурсов успешно изменены",
+      "LIMIT_UPDATE_ERROR": "Не удалось изменить квоты ресурсов",
+      "LIMIT_LOAD_ERROR": "Не удалось загрузить квоты ресурсов"
     },
     "MIN": "Min",
     "MAX": "Max",
