--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -817,7 +817,8 @@
       "SELECT_DATE": "Select a date",
       "GROUP_BY_TYPES": "Types",
       "GROUP_BY_VMS": "VMs",
-      "GROUP_BY_ACCOUNTS": "Accounts"
+      "GROUP_BY_ACCOUNTS": "Accounts",
+      "WITHOUT_VM": "Without VM"
     },
     "SIDEBAR": {
       "DETAILS": "Details",
