--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -817,8 +817,7 @@
       "SELECT_DATE": "Выберите дату",
       "GROUP_BY_TYPES": "Типам",
       "GROUP_BY_VMS": "ВМ",
-      "GROUP_BY_ACCOUNTS": "Аккаунтам",
-      "WITHOUT_VM": "Без виртуальной машины"
+      "GROUP_BY_ACCOUNTS": "Аккаунтам"
     },
     "SIDEBAR": {
       "DETAILS": "Детали",
