fix resource quotas

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1517,7 +1517,8 @@
     "REQUEST": {
       "REQUEST_RESOURCES_BUTTON": "Request resources",
       "REQUEST_RESOURCES_TITLE": "Request resources",
-      "LIMIT_UPDATED": "Resource limits updated successfully"
+      "LIMIT_UPDATED": "Resource limits updated successfully",
+      "CAN_NOT_CHANGE_RESOURCES": "You can not change any resource limits"
     },
     "ADMIN_PAGE": {
       "QUOTA_UPDATED": "Resource quotas updated successfully",
