--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -125,7 +125,11 @@
       "PRIMARY_STORAGE_EXCEEDED": "Primary storage capacity exceeded",
       "UNABLE_TO_FIND_PRIMARY_STORAGE": "Unable to find suitable primary storage when creating volume {{ val1 }}",
       "VOLUME_BUSY": "There is other active snapshot tasks on the instance to which the volume is attached. Please try again later.",
-      "VOLUME_RESOURCES_LIMIT_EXCEEDED": "The disk offering cannot be selected because it doesn't fit the account resources available"
+      "VOLUME_RESOURCES_LIMIT_EXCEEDED": "The disk offering cannot be selected because it doesn't fit the account resources available",
+      "VOLUME_DELETING_UNAVAILABLE": "Data disk deleting is unavailable for VMs with active snapshots",
+      "VOLUME_ATTACH_UNAVAILABLE": "Data disk attachment is unavailable for VMs with active snapshots",
+      "VOLUME_DETACH_UNAVAILABLE": "Data disk detachment is unavailable for VMs with active snapshots",
+      "VOLUME_RESIZE_UNAVAILABLE": "Data disk resize is unavailable for VMs with active snapshots"
     },
     "SNAPSHOT_POLICIES": {
       "HOURLY_TURN_OFF": "Hourly schedule is turned off"
@@ -174,7 +178,6 @@
       "TAKE_FAILED": "Failed to take a snapshot",
       "DELETION_IN_PROGRESS": "Deleting a snapshot",
       "DELETION_DONE": "Snapshot deleted",
-      "DELETION_FAILED": "Failed to delete a snapshot",
       "REVERT_IN_PROGRESS": "Reverting a disk",
       "REVERT_DONE": "Disk reverted",
       "REVERT_FAILED": "Failed to revert a disk"
