--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -107,6 +107,9 @@
     "ISO": {
       "VMS_IN_USE": "Невозможно удалить ISO файл, так как он используется следующими машинами:<br>{{ vms }}"
     },
+    "VM_SNAPSHOT": {
+      "LIMIT_EXCEEDED": "Максимальное количество снимков ВМ превышено. Проверьте конфигурации"
+    },
     "SNAPSHOT": {
       "LIMIT_EXCEEDED": "Лимит снимков превышен. Для создания новых снимков Вам необходимо удалить какие-либо из ранее созданных снимков."
     },
