--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -95,6 +95,7 @@
     }
   },
   "ERRORS": {
+    "SUPPORT_INFORMATION": "Информация о тех. поддержке",
     "COMMON": {
       "THE_NAME_IS_TAKEN": "Имя {{ val1 }} уже занято"
     },
