--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -136,6 +136,10 @@
     "VM_LOGS": {
       "TOKEN_DOES_NOT_EXIST": "The token does not exist",
       "INVALID_TOKEN": "Invalid token"
+    },
+    "RESOURCE_QUOTAS": {
+      "FAILED_RETRIEVE": "You can not change any resource limits",
+      "MAX_MUST_BE_GREATER": "Maximum must be greater than or equal to minimum"
     }
   },
   "NOTIFICATIONS": {
