--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -136,6 +136,10 @@
     "VM_LOGS": {
       "TOKEN_DOES_NOT_EXIST": "Указанный токен не существует",
       "INVALID_TOKEN": "Невалидный токен"
+    },
+    "RESOURCE_QUOTAS": {
+      "FAILED_RETRIEVE": "Невозможно изменить ресурсы",
+      "MAX_MUST_BE_GREATER": "Максимальное значение должно быть больше или равно минимальному"
     }
   },
   "NOTIFICATIONS": {
