feat(vm-creation): add a capability to copy API Log in case of error during VM creation

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -605,7 +605,8 @@
       "NO_TEMPLATES": "No templates available",
       "NO_OFFERINGS": "No offerings available",
       "GENERAL": "General",
-      "ADVANCED": "Advanced"
+      "ADVANCED": "Advanced",
+      "DETAILS": "Details"
     },
     "MODALS": {
       "TAKE_VM_SNAPSHOT": {
