--- a/docs/source/locale/ru/LC_MESSAGES/CS-UI_Pulse.po
+++ b/docs/source/locale/ru/LC_MESSAGES/CS-UI_Pulse.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: CSUI\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-10-10 15:17+0700\n"
-"PO-Revision-Date: 2018-10-11 16:39+0700\n"
+"PO-Revision-Date: 2019-01-11 17:02+0700\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -52,10 +52,10 @@ msgid ""
 "scales like minutes, hours, days and enables data overlays to monitor "
 "peak and average values."
 msgstr ""
-"Pulse позволяет пользователям Apache CloudStack контролировать текущее и "
-"предшествующие рабочие состояния виртуальных машин. Плагин поддерживает "
-"различную группировку данных по времени - поминутная, почасовая, "
-"посуточная, а также позволяет производить наложение данных для "
+"Pulse дает возможность пользователям Apache CloudStack контролировать "
+"текущее и предшествующие рабочие состояния виртуальных машин. Плагин "
+"поддерживает различную группировку данных по времени - поминутная, "
+"почасовая, посуточная, а также позволяет производить наложение данных для "
 "отслеживания средних и пиковых значений. "
 
 #: ../../CS-UI_Pulse.rst:15
@@ -65,15 +65,14 @@ msgid ""
 "states, although it is vital for system administrators to successfully "
 "operate virtual servers."
 msgstr ""
-"На наш взгляд, данный плагин является важным в экосистеме CloudStack, т."
-"к. сейчас в CloudStack не существует встроенной системы для отслеживания "
-"рабочих состояний виртуальных машин, в то время, как это необходимо "
-"системным администраторам для отслеживания работы виртуальных серверов."
+"На наш взгляд, данный плагин важен в экосистеме CloudStack, т.к. сейчас в "
+"CloudStack не существует встроенной системы для отслеживания рабочих "
+"состояний виртуальных машин, в то время, как это необходимо системным "
+"администраторам для отслеживания работы виртуальных серверов."
 
 #: ../../CS-UI_Pulse.rst:17
 msgid "Plugin deployment and configuration Instructions can be found below."
-msgstr ""
-"Инструкции по установке и конфигурированию плагина представлены ниже."
+msgstr "Инструкции по установке и настройке плагина представлены ниже."
 
 #: ../../CS-UI_Pulse.rst:20
 msgid "Deployment Instructions"
@@ -106,12 +105,12 @@ msgid ""
 "Run docker container with a correctly specified ``cs-pulse-server`` "
 "endpoint."
 msgstr ""
-"Запустить контейнер docker, в котором указан корректный адрес ``cs-pulse-"
+"Запустить docker-контейнер, в котором указан корректный адрес ``cs-pulse-"
 "server``."
 
 #: ../../CS-UI_Pulse.rst:32
 msgid "Pulse configuration"
-msgstr "Конфигурирование Pulse"
+msgstr "Настройка Pulse"
 
 #: ../../CS-UI_Pulse.rst:34
 msgid ""
