--- a/docs/source/locale/ru/LC_MESSAGES/CSUI-Images.po
+++ b/docs/source/locale/ru/LC_MESSAGES/CSUI-Images.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: CSUI\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-10-24 17:18+0700\n"
-"PO-Revision-Date: 2018-10-26 09:05+0700\n"
+"PO-Revision-Date: 2019-01-11 11:02+0700\n"
 "Last-Translator: \n"
 "Language: ru\n"
 "Language-Team: \n"
@@ -30,7 +30,7 @@ msgid ""
 "files that are used as installation sources for VMs."
 msgstr ""
 "В разделе *Виртуальные машины* -> *Образы* можно управлять шаблонами и файлами "
-"ISO, используемыми с качестве источников установки виртуальных машин."
+"ISO, используемыми в качестве источников установки виртуальных машин."
 
 #: ../../CSUI-Images.rst:9
 msgid ""
