--- a/docs/source/locale/ru/LC_MESSAGES/CSUI-LogView.po
+++ b/docs/source/locale/ru/LC_MESSAGES/CSUI-LogView.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: CSUI\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-12-25 15:59+0700\n"
-"PO-Revision-Date: 2018-12-25 16:02+0700\n"
+"PO-Revision-Date: 2019-01-10 15:59+0700\n"
 "Last-Translator: \n"
 "Language: ru\n"
 "Language-Team: \n"
@@ -129,7 +129,7 @@ msgid ""
 "Accounts * - Allows Administrators to further select a VM in a specific account/"
 "accounts. Select an account or a number of accounts in the drop-down list."
 msgstr ""
-"Аккаунты * - Позволяют Администратору в следующем шаге выбрать машину "
+"Аккаунты * - позволяют Администратору в следующем шаге выбрать машину "
 "конкретного(ых) аккаунта(ов), для которой необходимо просмотреть журналы . "
 "Выберите из ниспадающего списка один или несколько аккаунтов."
 
@@ -140,7 +140,7 @@ msgid ""
 "selected at the previous step, if you are an Administrator. If you are a user, "
 "you can see the machines belonging to your user only."
 msgstr ""
-"ВМ * -  Позволяют выбрать журнылы конкретной ВМ. Выберите ВМ из ниспадающего "
+"ВМ * -  позволяют выбрать журнылы конкретной ВМ. Выберите ВМ из ниспадающего "
 "списка. Список доступных ВМ определяется аккаунтом(ами), выбранным(и) на "
 "предыдущем шаге, если вы Администратор. Если вы пользователь, в списке вы "
 "увидите те машины, которые принадлежат вашему пользователю."
@@ -151,7 +151,7 @@ msgid ""
 "Choose a log file in the drop-down list. If no log file selected, all machine "
 "logs will display in the list."
 msgstr ""
-"Журнал * - Позволяет просматривать записи конкретного журнала. Выберите из "
+"Журнал * - позволяет просматривать записи конкретного журнала. Выберите из "
 "ниспадающего списка журнал для показа записей из него. Если не выбирать "
 "конкретный журнал, в списке будут отображены записи из всех журналов выбранной "
 "машины."
@@ -173,7 +173,7 @@ msgid ""
 "the \"Settings\" section.  Enter start and end time you wish into the fields to "
 "set a custom time period."
 msgstr ""
-"Время - Позволяет задать конкретный промежуток времени в рамках заданного "
+"Время - позволяет задать конкретный промежуток времени в рамках заданного "
 "периода. Формат времени определяется настройкой формата, заданной в разделе "
 "\"Настройки\". Вы можете ввести желаемое время в полях для начального и "
 "конечного времени."
@@ -206,7 +206,7 @@ msgstr ""
 
 #: ../../CSUI-LogView.rst:66
 msgid "View Logs List"
-msgstr "Список логов"
+msgstr "Список записей журналов"
 
 #: ../../CSUI-LogView.rst:67
 msgid ""
@@ -360,8 +360,9 @@ msgid ""
 "**Show last (minutes)** - allows viewing logs for the last set period. You can "
 "set the number of minutes from 1 (default) to 10."
 msgstr ""
-"**Показывать за последние (минуты)** - время, за которое вы желаете видеть "
-"записи; допустимые значения - от 1 (по умолчанию) до 10 минут."
+"**Показывать за последние (минуты)** - время, за которое вы желаете отображать "
+"записи при каждом обновлении списка; допустимые значения - от 1 (по умолчанию) "
+"до 10 минут."
 
 #: ../../CSUI-LogView.rst:116
 msgid ""
