--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -822,7 +822,8 @@
       "SELECT_DATE": "Выберите дату",
       "GROUP_BY_TYPES": "Типам",
       "GROUP_BY_VMS": "ВМ",
-      "GROUP_BY_ACCOUNTS": "Аккаунтам"
+      "GROUP_BY_ACCOUNTS": "Аккаунтам",
+      "NO_VM": "Нет виртуальной машины"
     },
     "SIDEBAR": {
       "DETAILS": "Детали",
