--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -144,7 +144,8 @@
     },
     "RESOURCE_QUOTAS": {
       "FAILED_RETRIEVE": "You can not change any resource limits",
-      "MAX_MUST_BE_GREATER": "Maximum must be greater than or equal to minimum"
+      "MAX_MUST_BE_GREATER": "Maximum must be greater than or equal to minimum",
+      "MAX_MUST_BE_BETWEEN": "Maximum must be between {{ val1 }} and {{ val2 }}"
     }
   },
   "NOTIFICATIONS": {
@@ -1525,11 +1526,11 @@
       "SECONDARY_STORAGE": "Secondary storage (GB)"
     },
     "REQUEST": {
-      "REQUEST_RESOURCES_BUTTON": "Request resources",
+      "REQUEST_RESOURCES_BUTTON": "Update resources",
       "REQUEST_RESOURCES_TITLE": "Request resources",
       "LIMIT_UPDATED": "Resource limits updated successfully",
       "CAN_NOT_CHANGE_RESOURCES": "You can not change any resource limits",
-      "REQUEST_BUTTON": "Request"
+      "REQUEST_BUTTON": "Update"
     },
     "ADMIN_PAGE": {
       "QUOTA_UPDATED": "Resource quotas updated successfully",
