feat(resource-quotas): admin and user interface (#1532)
PR close #1458

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -141,6 +141,11 @@
     "VM_LOGS": {
       "TOKEN_DOES_NOT_EXIST": "The token does not exist",
       "INVALID_TOKEN": "Invalid token"
+    },
+    "RESOURCE_QUOTAS": {
+      "FAILED_RETRIEVE": "You can not change any resource limits",
+      "MAX_MUST_BE_GREATER": "Maximum must be greater than or equal to minimum",
+      "MAX_MUST_BE_BETWEEN": "Maximum must be between {{ val1 }} and {{ val2 }}"
     }
   },
   "NOTIFICATIONS": {
@@ -316,6 +321,7 @@
     "ACTIVITY_LOG": "Activity log",
     "SSH_KEYS": "SSH keys",
     "ACCOUNTS": "Accounts",
+    "RESOURCE_QUOTAS": "Resource quotas",
     "LOGS": "View logs",
     "SETTINGS": "Settings",
     "LOGOUT": "Logout",
@@ -1503,6 +1509,36 @@
       "API_KEY": "API key",
       "SECRET_KEY": "Secret key"
     }
+  },
+  "RESOURCE_QUOTAS_PAGE": {
+    "RESOURCES": {
+      "INSTANCES": "Instances",
+      "IPS": "IPs",
+      "VOLUMES": "Volumes",
+      "SNAPSHOTS": "Snapshots",
+      "TEMPLATES": "Templates",
+      "PROJECTS": "Projects",
+      "NETWORK": "Network",
+      "VPCS": "VPCs",
+      "CPUS": "CPUs",
+      "MEMORY": "Memory (MB)",
+      "PRIMARY_STORAGE": "Primary storage (GB)",
+      "SECONDARY_STORAGE": "Secondary storage (GB)"
+    },
+    "REQUEST": {
+      "REQUEST_RESOURCES_BUTTON": "Update resources",
+      "REQUEST_RESOURCES_TITLE": "Request resources",
+      "LIMIT_UPDATED": "Resource limits updated successfully",
+      "CAN_NOT_CHANGE_RESOURCES": "You can not change any resource limits",
+      "REQUEST_BUTTON": "Update"
+    },
+    "ADMIN_PAGE": {
+      "QUOTA_UPDATED": "Resource quotas updated successfully",
+      "QUOTA_LOAD_ERROR": "Failed to load resource quotas"
+    },
+    "MIN": "Min",
+    "MAX": "Max",
+    "UPDATE": "Update"
   },
   "LOGS_PAGE": {
     "FILTERS": {
