--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -141,6 +141,11 @@
     "VM_LOGS": {
       "TOKEN_DOES_NOT_EXIST": "Указанный токен не существует",
       "INVALID_TOKEN": "Невалидный токен"
+    },
+    "RESOURCE_QUOTAS": {
+      "FAILED_RETRIEVE": "Невозможно изменить ресурсы",
+      "MAX_MUST_BE_GREATER": "Максимальное значение должно быть больше или равно минимальному",
+      "MAX_MUST_BE_BETWEEN": "Максимальное значение должно быть между {{ val1 }} и {{ val2 }}"
     }
   },
   "NOTIFICATIONS": {
@@ -316,6 +321,7 @@
     "ACTIVITY_LOG": "Журнал событий",
     "SSH_KEYS": "SSH ключи",
     "ACCOUNTS": "Аккаунты",
+    "RESOURCE_QUOTAS": "Квоты ресурсов",
     "LOGS": "Просмотр логов",
     "SETTINGS": "Настройки",
     "LOGOUT": "Выйти",
@@ -1499,6 +1505,36 @@
       "API_KEY": "API ключ",
       "SECRET_KEY": "Секретный ключ"
     }
+  },
+  "RESOURCE_QUOTAS_PAGE": {
+    "RESOURCES": {
+      "INSTANCES": "Машины",
+      "IPS": "Маршрутизируемые IP адреса",
+      "VOLUMES": "Диски",
+      "SNAPSHOTS": "Снимки",
+      "TEMPLATES": "Шаблоны",
+      "PROJECTS": "Проекты",
+      "NETWORK": "Сеть",
+      "VPCS": "VPC",
+      "CPUS": "CPU",
+      "MEMORY": "Память (МБ)",
+      "PRIMARY_STORAGE": "Основное хранилище (ГБ)",
+      "SECONDARY_STORAGE": "Дополнительное хранилище (ГБ)"
+    },
+    "REQUEST": {
+      "REQUEST_RESOURCES_BUTTON": "Обновить ресурсы",
+      "REQUEST_RESOURCES_TITLE": "Запрос ресурсов",
+      "LIMIT_UPDATED": "Лимиты ресурсов успешно изменены",
+      "CAN_NOT_CHANGE_RESOURCES": "Невозможно изменить ресурсы",
+      "REQUEST_BUTTON": "Обновить"
+    },
+    "ADMIN_PAGE": {
+      "QUOTA_UPDATED": "Квоты ресурсов успешно изменены",
+      "QUOTA_LOAD_ERROR": "Не удалось загрузить квоты ресурсов"
+    },
+    "MIN": "От",
+    "MAX": "До",
+    "UPDATE": "Обновить"
   },
   "LOGS_PAGE": {
     "FILTERS": {
