feat(vm-snapshot): manage maximum VM snapshots amount in config.json (#1523)
PR close #1415

--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -108,6 +108,9 @@
     "ISO": {
       "VMS_IN_USE": "Невозможно удалить ISO файл, так как он используется следующими машинами:<br>{{ vms }}"
     },
+    "VM_SNAPSHOT": {
+      "LIMIT_EXCEEDED": "Максимальное количество снимков ВМ превышено. Проверьте конфигурации"
+    },
     "SNAPSHOT": {
       "LIMIT_EXCEEDED": "Лимит снимков превышен. Для создания новых снимков Вам необходимо удалить какие-либо из ранее созданных снимков.",
       "CREATION_UNAVAILABLE_FOR_STOPPED": "Создание снимков ВМ недоступно для остановленных ВМ",
