--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -108,6 +108,9 @@
     "ISO": {
       "VMS_IN_USE": "Unable to delete the ISO as it's used by the following VMs:<br>{{ vms }}"
     },
+    "VM_SNAPSHOT": {
+      "LIMIT_EXCEEDED": "The maximum amount of VM snapshots is exceeded. Please check your configurations"
+    },
     "SNAPSHOT": {
       "LIMIT_EXCEEDED": "Snapshot limit has been exceeded. You need to delete some of your previous snapshots first.",
       "CREATION_UNAVAILABLE_FOR_STOPPED": "VM snapshot creation is unavailable for stopped VMs",
