--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -1606,10 +1606,10 @@
       "KEYBOARD_LAYOUT": "Раскладка клавиатуры"
     },
     "ACCOUNT_TAGS": {
-      "TITLE": "Account tags"
+      "TITLE": "Тэги аккаунта"
     },
     "USER_TAGS": {
-      "TITLE": "User tags"
+      "TITLE": "Тэги пользователя"
     },
     "VM_LOGS": {
       "TITLE": "Просмотр логов (режим реального времени)",
