--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -1606,10 +1606,10 @@
       "KEYBOARD_LAYOUT": "Раскладка клавиатуры"
     },
     "ACCOUNT_TAGS": {
-      "TITLE": "Тэги аккаунта"
+      "TITLE": "Теги аккаунта"
     },
     "USER_TAGS": {
-      "TITLE": "Тэги пользователя"
+      "TITLE": "Теги пользователя"
     },
     "VM_LOGS": {
       "TITLE": "Просмотр логов (режим реального времени)",
