--- a/docs/source/locale/ru/LC_MESSAGES/CS-UI_Resources.po
+++ b/docs/source/locale/ru/LC_MESSAGES/CS-UI_Resources.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CSUI\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-01-24 11:17+0700\n"
-"PO-Revision-Date: 2019-01-24 12:05+0700\n"
+"POT-Creation-Date: 2019-01-29 14:50+0700\n"
+"PO-Revision-Date: 2019-01-29 14:56+0700\n"
 "Last-Translator: \n"
 "Language: ru\n"
 "Language-Team: \n"
@@ -20,180 +20,185 @@ msgstr ""
 "Generated-By: Babel 2.4.0\n"
 "X-Generator: Poedit 1.8.7.1\n"
 
-#: ../../ CS-UI_Resources.rst:4
+#: ../../CS-UI_Resources.rst:4
 msgid "Resource Limits Management Plugin"
 msgstr "Плагин управления лимитами ресурсов"
 
-#: ../../ CS-UI_Resources.rst:9
+#: ../../CS-UI_Resources.rst:9
 msgid "Overview"
 msgstr "Общая информация"
 
-#: ../../ CS-UI_Resources.rst:11
+#: ../../CS-UI_Resources.rst:11
 msgid ""
 "We introduced a new plugin - *Resource Limits Management* - that allows "
 "Domain Administrators to manage resource quotas, and users to change "
 "resource limits. The extension helps to avoid such situations when a user "
 "has extra resources that are not used but accounted in billing. Or when a "
-"user has utilized all the available resources and now needs more. In "
-"either of these cases, a user would have to request Administrator to "
-"change the resource limits. With the new plugin a user gets access to "
-"resource limits, and Administrator can manage resoure quotas via UI."
+"user has utilized all the available resources and now needs more. In either "
+"of these cases, a user would have to request Administrator to change the "
+"resource limits. With the new plugin a user gets access to resource limits, "
+"and Administrator can manage resoure quotas via UI."
 msgstr ""
 "Мы представили новый плагин, который позоволяет администраторам домена "
 "управлять квотами ресурсов, доступных пользователю, а пользавателю в свою "
 "очередь - изменять ограничения доступных для него ресурсов в рамках тех "
 "квот,  которые установил администратор. Плагин позволяет разумно "
-"расходовать ресурсы и избегать ситуаций, когда лишние ресурсы "
-"простаивают, но за них приходится платить.  Или когда пользователь "
-"использовал все доступные ресурсы, и ему приходится обращаться к "
-"Администратору, чтобы тот выделил ему дополнительные ресурсы. C новым "
-"плагином пользователь может сам изменить лимиты ресурсов. А Администратор "
-"получает доступ к управлению квотами ресурсов."
+"расходовать ресурсы и избегать ситуаций, когда лишние ресурсы простаивают, "
+"но за них приходится платить.  Или когда пользователь использовал все "
+"доступные ресурсы, и ему приходится обращаться к Администратору, чтобы тот "
+"выделил ему дополнительные ресурсы. C новым плагином пользователь может сам "
+"изменить лимиты ресурсов. А Администратор получает доступ к управлению "
+"квотами ресурсов."
 
-#: ../../ CS-UI_Resources.rst:13
+#: ../../CS-UI_Resources.rst:13
 msgid "The extension uses two backend plugins:"
 msgstr "Расширение работает на основе двух бэкенд-плагинов:"
 
-#: ../../ CS-UI_Resources.rst:15
+#: ../../CS-UI_Resources.rst:15
 msgid ""
-"the `µAPI Gateway plugin <https://bitworks.software/en/products/"
-"cloudstack-micro-api-gateway/>`_ developed by us to help developers to "
-"create extensions for CloudStack using any programming language."
+"the `µAPI Gateway plugin <https://bitworks.software/en/products/cloudstack-"
+"micro-api-gateway/>`_ developed by us to help developers to create "
+"extensions for CloudStack using any programming language."
 msgstr ""
 "`µAPI Gateway <https://bitworks.software/en/products/cloudstack-micro-api-"
 "gateway/>`_, с помощью которого разработчики могут создавать и подключать "
 "расширения для CloudStack, созданные на любом языке программирования."
 
-#: ../../ CS-UI_Resources.rst:17
+#: ../../CS-UI_Resources.rst:17
 msgid ""
-"the *Resource Limits Management* backend plugin that extends CloudStack "
-"API with additional endpoints."
+"the *Resource Limits Management* backend plugin that extends CloudStack API "
+"with additional endpoints."
 msgstr ""
 "бэкенд-плагин *Resource Limits Management*, который расширяет API "
 "CloudStack дополнительными вызовами."
 
-#: ../../ CS-UI_Resources.rst:19
-msgid ""
-"To get detailed instructions on plugins deployment you will need access "
-"to projects at GitLab."
-msgstr ""
-"Для доступа к подробным инструкциям по установке и настройке бэкенд-"
-"плагинов необходим доступ к проектам в GitLab. "
-
-#: ../../ CS-UI_Resources.rst:21
+#: ../../CS-UI_Resources.rst:19
 msgid ""
 "After the backend plugins are deployed and configured the Resource Limits "
-"management UI-plugin can be activated via the configuration file (see the "
-"`configuration guide <https://github.com/bwsw/cloudstack-ui/blob/master/"
-"config-guide.md#extensions>`_). Once it is activated, users and "
-"administrators get access to resource limits and quotas management via UI."
+"Management UI-plugin can be activated and configured via the configuration "
+"file (see the `configuration guide <https://github.com/bwsw/cloudstack-ui/"
+"blob/master/config-guide.md#resource-limits-plugin>`_). Once it is "
+"activated, users and administrators get access to resource limits and "
+"quotas management via UI."
 msgstr ""
-"После установки, подключения и настройки бэкенд-плагинов можно "
-"активировать и настроить UI-плагин Resource Limits Management в файле "
-"конфигурации config.json (см. подробнее `руководство по конфигурациям "
-"<https://github.com/bwsw/cloudstack-ui/blob/master/config-guide."
-"md#extensions>`_). После этого пользователям и Администраторам становится "
-"доступно управление ресурсами в UI."
+"После установки, подключения и настройки бэкенд-плагинов можно активировать "
+"и настроить UI-плагин Resource Limits Management в файле конфигурации "
+"config.json (см. подробнее `руководство по конфигурациям <https://github."
+"com/bwsw/cloudstack-ui/blob/master/config-guide.md#resource-limits-"
+"plugin>`_). После этого пользователям и Администраторам становится доступно "
+"управление ресурсами в UI."
 
-#: ../../ CS-UI_Resources.rst:24
+#: ../../CS-UI_Resources.rst:22
 msgid "Plugin Deployment"
 msgstr "Установка плагина"
 
-#: ../../ CS-UI_Resources.rst:26
+#: ../../CS-UI_Resources.rst:24
 msgid ""
-"The detailed instructions on the plugin deployment are presented at the "
-"project wiki-page."
+"The instructions on plugin deployment are presented at the `project wiki-"
+"page <https://github.com/bwsw/cloudstack-ui/wiki/Resource-Limits-Management-"
+"Plugin>`_."
 msgstr ""
-"Подробная инструкция по установке плагина представлена на странице wiki "
-"проекта."
+"Подробная инструкция по установке плагина представлена на `странице wiki "
+"проекта <https://github.com/bwsw/cloudstack-ui/wiki/Resource-Limits-"
+"Management-Plugin>`_."
 
-#: ../../ CS-UI_Resources.rst:28
+#: ../../CS-UI_Resources.rst:26
 msgid "To enable the Resource Limits Management UI-plugin you will need to:"
 msgstr "Чтобы подключить UI-плагин Resource Limits Management нужно:"
 
-#: ../../ CS-UI_Resources.rst:30
-msgid "Install and configure the µAPI Gateway backend plugin in CloudStack."
+#: ../../CS-UI_Resources.rst:28
+msgid "Install and configure the *µAPI Gateway* backend plugin in CloudStack."
 msgstr "Установить и настроить бэкенд-плагин µAPI Gateway в CloudStack."
 
-#: ../../ CS-UI_Resources.rst:31
-msgid "Deploy the Resource Limits Management backend plugin."
+#: ../../CS-UI_Resources.rst:29
+msgid "Deploy the *Resource Limits Management* backend plugin."
 msgstr "Установить бэкенд-плагин Resource Limits Management."
 
-#: ../../ CS-UI_Resources.rst:32
-msgid "Enable and configure the UI extension via the `config.json` file."
+#: ../../CS-UI_Resources.rst:30
+msgid ""
+"Enable and configure the *Resource Limits Management* UI extension via the "
+"`config.json` file."
 msgstr ""
-"Настроить и подключить через конфигурационный файл UI-плагин Resource "
-"Limits Management."
+"Настроить и подключить UI-плагин Resource Limits Management через "
+"конфигурационный файл."
 
-#: ../../ CS-UI_Resources.rst:35
-msgid "Resource limits management for Domain Administrators"
+#: ../../CS-UI_Resources.rst:33
+msgid "Managing Resource Limits via UI"
+msgstr "Управление лимитами ресурсов через UI"
+
+#: ../../CS-UI_Resources.rst:36
+msgid "Resource limits management by Domain Administrators"
 msgstr "Управление квотами ресурсов для Администраторов домена"
 
-#: ../../ CS-UI_Resources.rst:37
+#: ../../CS-UI_Resources.rst:38
 msgid ""
-"After the plugin is enabled, Domain Administrator can open \"Resource "
-"quotas\" under the \"Account\" menu. In this section, Administrator can "
-"view and set resource quotas. To edit resource quotas Administrator "
-"enters desired minimum and maximum values for a resource parameter."
+"After the plugin is enabled, Domain Administrator can open \"Resource quotas"
+"\" under the \"Accounts\" menu. In this section, Administrator can view and "
+"set resource quotas. To edit resource quotas Administrator enters desired "
+"minimum and maximum values for a resource parameter."
 msgstr ""
-"После активации плагина в меню \"Аккаунт\" Администратору становится "
+"После активации плагина в меню \"Аккаунты\" Администратору становится "
 "доступен раздел \"Квоты ресурсов\". В нем можно просматривать и "
 "редактировать ограничения ресурсов. Для этого достаточно ввести желаемые "
 "минимальные и максимальные значения для того параметра ресурсов, квоты "
 "которого нужно изменить."
 
-#: ../../ CS-UI_Resources.rst:41
+#: ../../CS-UI_Resources.rst:42
 msgid ""
 "[-1] stands for any value, that means a resource parameter with [-1] is "
-"unlimited. Such parameters are not available for users to request "
-"resource changes."
+"unlimited. Such parameters are not available for users to change resource "
+"limits."
 msgstr ""
 "Значение [-1] означает, что параметр ресурса неограничен. Лимиты такого "
 "параметра недоступны для изменения пользователем. "
 
-#: ../../ CS-UI_Resources.rst:43
+#: ../../CS-UI_Resources.rst:44
 msgid "Administrator sets resource quotas for all accounts in the domain."
 msgstr "Ограничения задаются для всех аккаунтов в домене."
 
-#: ../../ CS-UI_Resources.rst:46
-msgid "Request resources for users"
+#: ../../CS-UI_Resources.rst:47
+msgid "Changing resources by users"
 msgstr "Изменения лимитов ресурсов пользователями"
 
-#: ../../ CS-UI_Resources.rst:48
+#: ../../CS-UI_Resources.rst:49
 msgid ""
 "After the plugin is enabled, a user can change resource limits in case of "
-"the lack of resources or, alternatively, nonuse of extra resources. To "
-"send a request a user goes to the Resource usage panel under the *Virtual "
-"Machine* section and clicks \"Request resources\"."
+"the lack of resources or, alternatively, nonuse of extra resources. To send "
+"a request a user goes to the Resource usage panel under the *Virtual "
+"Machine* section and clicks «Update resources»."
 msgstr ""
-"После активации плагина у пользователя появляется возможность запросить "
-"изменение доступных ресурсов аккаунта. Пользователь может увеличить "
-"ресурсы, если ему не хватает выделенных ресурсов, или уменьшить доступные "
-"ресурсы, если было выделено больше ресурсов, чем он фактически "
-"использует. Чтобы изменить лимиты ресурсов, пользователю достаточно "
-"нажать на кнопку \"Запросить ресурсы\", которая расположена в панели "
-"ресурсов в разделе *Виртуальные машины*."
+"После активации плагина у пользователя появляется возможность изменить "
+"лимиты доступных ресурсов. Чтобы изменить лимиты ресурсов, пользователю "
+"достаточно нажать на кнопку \"Обновить ресурсы\", которая расположена в "
+"панели ресурсов в разделе *Виртуальные машины*."
 
-#: ../../ CS-UI_Resources.rst:50
+#: ../../CS-UI_Resources.rst:51
 msgid ""
 "In the appeared modal window, a user can see resource parameters and a "
 "slider for each parameter. The scales are limited in accordance with the "
-"quotas set by Administrator. A user can move a slider within the quotas "
-"to change the resource parameter value. Then click \"Request\" to change "
-"the resorce limits."
+"quotas set by Administrator. A user can move a slider within the quotas to "
+"change a resource parameter value. Then click «Update» to change the "
+"resource limits."
 msgstr ""
 "При нажатии на кнопку открывается модальное окно, в котором пользователь "
 "видит параметры ресурсов и \"бегунок\" для изменения ограничений каждого "
 "ресурса. На шкале для каждого ресурса пользователь видит ограничения, "
 "заданные Администратором  - двигать бегунок можно только в рамках этих "
 "ограничений. После установки нужных значений, пользователь нажимает "
-"\"Запросить\". Лимиты ресурсов изменяются в соответствии с заданными "
+"\"Обновить\". Лимиты ресурсов изменяются в соответствии с заданными "
 "значениями."
 
-#: ../../ CS-UI_Resources.rst:54
+#: ../../CS-UI_Resources.rst:55
 msgid ""
-"Unlimited resources (set by Administrator as [-1]) are not listed among "
-"the resource parameters. That means they are not available for changing."
+"Unlimited resources (set by Administrator as [-1]) are not listed among the "
+"resource parameters. That means they are not available for changing."
 msgstr ""
 "В списке нет тех параметров ресурсов, у которых ограничения не заданы "
 "(квота имеет значение [-1]), то есть для них нельзя запросить изменения. "
+
+#~ msgid ""
+#~ "To get detailed instructions on plugins deployment you will need access "
+#~ "to projects at GitLab."
+#~ msgstr ""
+#~ "Для доступа к подробным инструкциям по установке и настройке бэкенд-"
+#~ "плагинов необходим доступ к проектам в GitLab. "
