feat(vm-creation): add a capability to copy API Log in case of error during VM creation (#1533)
PR close #645

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -618,7 +618,11 @@
       "NO_TEMPLATES": "No templates available",
       "NO_OFFERINGS": "No offerings available",
       "GENERAL": "General",
-      "ADVANCED": "Advanced"
+      "ADVANCED": "Advanced",
+      "DETAILS": "Details",
+      "REQUEST": "REQUEST",
+      "PARAMS": "PARAMS",
+      "RESPONSE": "RESPONSE"
     },
     "MODALS": {
       "TAKE_VM_SNAPSHOT": {
